# Portfolio-Dashboard

./: .gitignore  README.md  app.py  dashboard.py  inspect_foliotrack.py  investment_PEA_Florian.json  main.py  pyproject.toml  test.py
.github/workflows/: python-package.yml
Portfolios/: investment_example.json
dashboard/: __init__.py  security_comparator.py  utils.py  utils_backtest.py  utils_equilibrium.py  utils_evolution.py  utils_load.py  utils_sec_comp.py
pages/: backtest.py  compare_securities.py  display_portfolio.py  equilibrium.py  equilibrium_buy.py  evolution.py  exchange_rates.py  load_portfolio.py  portfolio.py  utils.py
src/: config.py  styles.py
src/services/: backtest_service.py  data_service.py  market_service.py  optimization_service.py  portfolio_service.py  simulation_service.py
src/ui/components/: plots.py  sidebar.py
src/ui/fragments/: backtest_view.py  equilibrium_view.py  portfolio_actions.py  portfolio_table.py
tests/: conftest.py  test_all_pages.py  test_equilibrium_buy.py  test_load_portfolio.py  test_security_comparator.py
